--- a/complex-app/package.json
+++ b/complex-app/package.json
@@ -21,6 +21,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dompurify": "^3.3.0",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
